--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/9667ce28d2.js" crossorigin="anonymous"></script>
+    <link rel=" stylesheet" href="assets/css/style.css">
+
     <title>3 en 1</title>
 </head>
 
@@ -34,7 +36,7 @@
 
     <!-- PARTE 2 -->
     <div class="container-2">
-        <h2>Ahora, puedes elegir para llevar un máximo de 10 stickers en total! </h2>
+        <h2>Ahora, puedes elegir un máximo de 10 stickers para llevar en total! </h2>
         <div class="choose">
             <div class="sticker">
                 <img src="assets/img/sticker-1.png" alt="">
@@ -80,6 +82,18 @@
         <h2 id="access"></h2>
     </div>
     <!-- /PARTE 3 -->
+    <hr>
+    <footer>
+        <p>SoyeLema &copy; Todos los derechos reservados.</p>
+        <div class="redes">
+            <a href="https://www.instagram.com/soyelema/" target="_blank"><i
+                    class="fa-brands fa-instagram fa-xl"></i></a>
+            <a href="https://steamcommunity.com/id/SoyeLema/" target="_blank"><i
+                    class="fa-brands fa-steam fa-xl"></i></a>
+            <a href="https://github.com/SoyeLema/Proyecto12_Condicionales" target="_blank"><i
+                    class="fa-brands fa-github fa-xl"></i></a>
+        </div>
+    </footer>
 
     <script src="assets/js/index.js"></script>
 
