afinando cambios finales

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-1">
         <h2>Para comenzar: Haz click en la imagen!</h2>
         <div class="clickeable">
-            <img src="assets/img/elden-ring.png" alt="" id="click">
+            <img src="assets/img/elden-ring.png" alt="" id="click" style="border:none">
         </div>
     </div>
     <!-- /PARTE1 -->
