cambio en parte 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="title">
-        <img class="logo" src="assets/img/eldenring_new.webp" title="LA PASSWORD ES 447" alt="">
+        <img class="logo" src="assets/img/eldenring_new.webp" title="LAS PASSWORD SON 911 y 714" alt="">
         <h1>¡Bienvenido! Esta es una pequeña página con motivo de Elden Ring</h1>
     </div>
 
@@ -67,9 +67,9 @@
     <!-- PARTE 3 -->
     <div class="container-3">
         <h2>Por último...</h2>
-        <h2>Ingresa la <span title="intenta con 447">contraseña </span>correcta</h2>
-        <h4>Hay una <span title="intenta con 447">pista </span>oculta en el encabezado</h4>
-        <h5>Si ya no hay forma que adivines intenta mirando el código fuente o fijando el mouse sobre la pista</h5>
+        <h2>Encuentra las 2 <span title="intenta con 911 o 714">contraseñas </span>correctas</h2>
+        <h4>Hay una <span title="intenta con 911 o 714">pista </span>oculta en el encabezado</h4>
+        <h5>Si ya no hay forma que adivines intenta 911 y 714</h5>
         <!-- <<<----- LA CONTRASEÑA ES 447 JEJE -->
         <div class="password">
             <input id="pass1" type="number" value="0" min="0" max="9">
