se agrega favicon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/9667ce28d2.js" crossorigin="anonymous"></script>
     <link rel=" stylesheet" href="assets/css/style.css">
-
+    <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <title>3 en 1</title>
 </head>
 
