cambio en titulo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
     <div class="title">
         <img class="logo" src="assets/img/eldenring_new.webp" title="LAS PASSWORD SON 911 y 714" alt="">
-        <h1>¡Bienvenido! Esta es una pequeña página con motivo de Elden Ring</h1>
+        <h1>¡Bienvenid@! En esta pequeña página con motivo de Elden Ring</h1>
+        <h1>Encontrarás 3 desafíos programados en JavaScript para entretenerte un rato</h1>
     </div>
 
     <!-- PARTE 1 -->
